--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -14,22 +14,26 @@
   </div>
 </div> -->
 
-<div class="cards">
-  <% @items_paginator.each do |item| %>
-    <%= render "shared/grid-cards", item: item %>
-  <% end %>
-  <%= paginate @items_paginator %>
-</div>
+<!-- div class="spacer">
+    &nbsp;
+</div> -->
 
-<div class="maping-container">
-<%#= render "shared/grid-cards" %>
-<div class="mapper">
+
+<div style="display: flex; justify-content: space-around;">
+  <div class="cards index-cards">
+    <% @items_paginator.each do |item| %>
+      <%= render "shared/grid-cards", item: item %>
+    <% end %>
+    <%= paginate @items_paginator %>
+  </div>
+
   <div
     id="map"
-    style="width: 100%;
-    height: 600px;"
     data-markers="<%= @markers.to_json %>"
     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
   ></div>
+
 </div>
-</div>
+
+
+<%= javascript_pack_tag "map-padding" %>
