functionality to approve, decline and cancel orders added

--- a/app/assets/stylesheets/pages/_user_home.scss
+++ b/app/assets/stylesheets/pages/_user_home.scss
@@ -21,8 +21,12 @@
   display: none;
 }
 
-.light-green {
+.lgt-green {
   background-color: #62cd7a !important;
+}
+
+.lgt-yellow {
+  background-color: #f2de6d !important;
 }
 
 .item-flex-list {
