fix to use auth token in payment form

--- a/app/views/orders/_payment.html.erb
+++ b/app/views/orders/_payment.html.erb
@@ -1,5 +1,7 @@
 <% item = Item.find(@order.item_id) %>
 <%= form_tag order_payments_path(@order) do %>
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
+
   <article>
     <label class="amount"><%= item.title %>
       <span>Deposit amount: <%= humanized_money_with_symbol(@order.amount) %></span>
@@ -14,3 +16,4 @@
     data-amount="<%= @order.amount_cents %>"
     data-currency="<%= @order.amount.currency %>"></script>
 <% end %>
+
