--- a/app/assets/stylesheets/components/_show-list.scss
+++ b/app/assets/stylesheets/components/_show-list.scss
@@ -1,136 +1,131 @@
-
-a {
-  color: $dark-gray;
-  &:hover {
-    text-decoration: none;
-    color: black;
+.item-content {
+  a {
+    color: $dark-gray;
+    &:hover {
+      text-decoration: none;
+      color: black;
+    }
   }
-}
-.right-container {
-  width: 500px;
-}
 
-.left-container {
-  display: flex;
-  flex-direction: column;
-}
+  .modal-header {
+    text-align: center;
+  }
 
-.row {
-  display: flex;
-  padding: 24px 0;
-  text-align: left;
-}
+  .photo-calendar {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    grid-gap: 3em;
+    margin-top: 30px;
 
-.modal-header {
-  text-align: center;
-}
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
 
-.photo-calendar {
-  display: flex;
-  justify-content: space-between;
-  min-height: 80vh;
-}
+    .order_start_time label,
+    .order_end_time label {
+      margin-bottom: 0;
+      font-size: 12px;
+      text-transform: uppercase;
+    }
 
-// .middle-container {
-//   // display: flex;
-//   // justify-content: space-between;
-//   // padding: 27px 0;
-//   // position: relative;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: flex-start;
-//   margin: 0;
-//   padding: 0;
-//   border: 0;
-//   font-size: 100%;
-//   font: inherit;
-// }
+    .deposit {
+      font-size: 14px;
+      font-style: italic;
+    }
+  }
 
-.description-container {
-  margin: auto 0;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  max-width: 500px;
-}
+  .description-container {
+    margin: auto 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    max-width: 500px;
+  }
 
-.text-inline {
-  display: inline-block;
-}
+  .text-inline {
+    display: inline-block;
+  }
 
-input.btn-primary {
-  color: white;
-  padding: 8px 24px;
-  border-radius: 4px;
-  font-weight: bold;
-  background: $green;
-  transition: 0.3s;
-  border: 1px solid $green;
-  margin-bottom: 24px;
-}
+  input.btn-primary {
+    color: white;
+    padding: 8px 23px;
+    border-radius: 4px;
+    font-weight: bold;
+    background: $green;
+    transition: 0.3s;
+    border: 1px solid $green;
+    margin-bottom: 24px;
+  }
 
-.btn-primary:hover {
-  color: white;
-  padding: 8px 24px;
-  border-radius: 4px;
-  font-weight: bold;
-  background: $green;
-  border: 1px solid $green;
-  margin-bottom: 24px;
-  opacity: 0.7;
-}
+  .btn-primary:hover {
+    color: white;
+    padding: 8px 23px;
+    border-radius: 4px;
+    font-weight: bold;
+    background: $green;
+    border: 1px solid $green;
+    margin-bottom: 24px;
+    opacity: 0.7;
+  }
 
-a.btn-primary {
-  color: white;
-  padding: 8px 24px;
-  border-radius: 4px;
-  font-weight: bold;
-  background: $green;
-  transition: 0.3s;
-  border: 1px solid $green;
-  margin-bottom: 24px;
-}
+  a.btn-primary {
+    color: white;
+    padding: 8px 23px;
+    border-radius: 4px;
+    font-weight: bold;
+    background: $green;
+    transition: 0.3s;
+    border: 1px solid $green;
+    margin-bottom: 24px;
+  }
+
+  .container-review {
+    text-align: left;
+
+    label {
+      margin-bottom: 0;
+      font-size: 12px;
+      text-transform: uppercase;
+    }
+
+    span {
+      input[type="radio"] {
+        margin-right: 8px;
+      }
+
+      label {
+        margin-right: 12px;
+      }
+    }
+  }
+
+  .review-container {
+    display: flex;
+    background-color: #E8E8E8;
+    margin-bottom: 24px;
+  }
+
+  .review-rating {
+    font-size: 50px;
+    font-weight: bold;
+    padding: 24px;
+    color: #61CD7A;
+  }
+
+  .review-content {
+    margin: auto 0;
+    padding: 24px;
+  }
 
 
-// .btn-gradient {
-//   color: white;
-//   padding: 8px 24px;
-//   border-radius: 4px;
-//   font-weight: bold;
-//   background: linear-gradient(#167FFB, #0F60C4);
-//   transition: background 0.3s ease;
-//   border: 1px solid #0F60C4;
-//   margin-bottom: 24px;
-// }
-
-// .btn-gradient:hover {
-//   background: linear-gradient(#147EFF, #0F67DA);
-//   color: black;
-// }
-
-.container-review {
-  text-align: left;
-}
-
-.review-container {
-  display: flex;
-  background-color: #E8E8E8;
-  margin-bottom: 24px;
-}
-
-.review-rating {
-  font-size: 50px;
-  font-weight: bold;
-  padding: 24px;
-  color: #61CD7A;
-}
-
-.review-content {
-  margin: auto 0;
-  padding: 24px;
+  .datepicker {
+    width: 95%;
+  }
 }
