padding changed for grid cards on home page, photo size fixed for users when logged in

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h2>Recommended for you</h2>
+<h2>Last items added</h2>
 <div class="cards">
   <% @items.each do |item| %>
     <%= render "shared/grid-cards", item: item %>
