--- a/app/assets/stylesheets/components/_show-list.scss
+++ b/app/assets/stylesheets/components/_show-list.scss
@@ -20,7 +20,7 @@
     img {
       object-fit: cover;
       width: 100%;
-      height: 100%;
+      height: 232px;
     }
 
     .order_start_time label,
