--- a/app/views/pages/user_show.html.erb
+++ b/app/views/pages/user_show.html.erb
@@ -2,79 +2,117 @@
 <br />
 <!-- <h2 class="user-items">Here is a list of your items:</h2> -->
 <%#= render partial: "shared/plus_minus" %>
-<div class="item-flex-list">
-  <ul>
-    <li class="user-display user-items-btn lgt-green"><strong>My Items</strong></li>
-    <li class="user-display user-orders-btn"> <strong>My Orders</strong> </li>
-    <li class="user-display user-reservations-btn"> <strong>Other User Reservations</strong> </li>
-  </ul>
+<div id="user-toggle">
+  <input id="toggle-on" class="toggle toggle-left" name="toggle" value="false" type="radio" checked>
+  <label for="toggle-on" class="user-toggle-btn">Lending</label>
+  <input id="toggle-off" class="toggle toggle-right" name="toggle" value="true" type="radio">
+  <label for="toggle-off" class="user-toggle-btn">Borrowing</label>
 </div>
 
 <div id="item-display-div">
 
-  <div class="user-item-container user-items">
-    <h2>Your items:</h2>
-    <% @user_items.each do |item| %>
-      <%= link_to item_path(item), :action => 'go' do %>
-        <div class="item-li">
-          <%#= render partial: "shared/card", object: item, locals: {item_div: true} %>
-          <%= render 'shared/card', item: item, item_var: item, order_div: false %>
-          <span>
-            <button type="button" class="btn btn-info btn-sm item-btn">
-              <%= link_to "Edit item", edit_item_path(item) %>
-            </button>
-            <button type="button" class="btn btn-danger btn-sm item-btn">
-              <%= link_to "Delete", item_path(item),
-              method: :delete,
-              data: { confirm: "Are you sure?" } %>
-            </button>
-          </span>
-        </div>
-      <% end %>
-    <% end %>
-  </div>
+  <div id="user-borrowing-div">
+    <div class="item-flex-list user-display-toggle">
+      <ul>
+        <li class="user-display user-items-btn lgt-green"><strong>My Items</strong></li>
+        <li class="user-display user-orders-btn"> <strong>My Orders</strong> </li>
+      </ul>
+    </div>
 
-  <!-- <h2 class="user-orders user-item-parent">Here is the list of items you have requested or borrowed:</h2> -->
-  <%#= render partial: "shared/plus_minus" %>
-  <div class="hide user-item-container user-orders">
-    <h2>Items you've booked:</h2>
-    <% @user_orders.each do |order| %>
-      <%= link_to order_path(order), :action => 'go' do %>
-        <div class="item-li">
-          <%= render 'shared/card', order: order, user: order.item.user, item_var: order.item, order_div: true %>
-        </div>
+    <div class="user-item-container user-items">
+      <h2>Your items:</h2>
+      <% @user_items.each do |item| %>
+        <%= link_to item_path(item), :action => 'go' do %>
+          <div class="item-li">
+            <%#= render partial: "shared/card", object: item, locals: {item_div: true} %>
+            <%= render 'shared/card', item: item, item_var: item, order_div: false %>
+            <span>
+              <button type="button" class="btn btn-info btn-sm item-btn">
+                <%= link_to "Edit item", edit_item_path(item) %>
+              </button>
+              <button type="button" class="btn btn-danger btn-sm item-btn">
+                <%= link_to "Delete", item_path(item),
+                method: :delete,
+                data: { confirm: "Are you sure?" } %>
+              </button>
+            </span>
+          </div>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
+
+    <!-- <h2 class="user-orders user-item-parent">Here is the list of items you have requested or borrowed:</h2> -->
+    <%#= render partial: "shared/plus_minus" %>
+    <div class="hide user-item-container user-orders">
+      <h2>Items you've booked:</h2>
+      <% @user_orders.each do |order| %>
+        <%= link_to order_path(order), :action => 'go' do %>
+          <div class="item-li">
+            <%= render 'shared/card', order: order, user: order.item.user, item_var: order.item, order_div: true %>
+            <% if order.state === "pending" %>
+              <button type="button" class="btn btn-info btn-sm item-btn">Pay
+                  <%#= link_to "Pay", order_path(order, order: {state: "paid"}), method: :put, data: { confirm: "Are you sure you wish to approve this request?"}
+                   %>
+                </button>
+            <% else %>
+              <button type="button" class="btn btn-danger btn-sm item-btn">
+               <%= link_to "Cancel", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to cancel this request?"}
+                 %>
+              </button>
+            <% end %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
   </div>
 
   <!-- <h2 class="user-orders user-item-parent">Here is your current list of requested items. Please approve or reject these requests.</h2> -->
   <%#= render partial: "shared/plus_minus" %>
-  <div class="hide user-item-container user-reservations">
-    <h2>Items of yours that have been booked:</h2>
-    <% @my_orders.each do |order| %>
-      <%= link_to order_path(order), :action => 'go' do %>
-        <div class="item-li">
-          <%= render 'shared/card', order: order, user: order.user, item_var: order.item, order_div: true %>
-            <% if order.state === "pending" %>
+  <div id="user-lending-div" class="hide">
+    <div class="item-flex-list user-display-toggle">
+      <ul>
+        <li class="user-display other-user-requests-btn lgt-green"> <strong>Other User Requests</strong> </li>
+        <li class="user-display other-user-reservations-btn"> <strong>Other User Reservations</strong> </li>
+      </ul>
+    </div>
+
+    <div class="user-item-container other-user-requests">
+      <h2>Items of yours that have been requested:</h2>
+      <% @my_orders.each do |order| %>
+        <%= link_to order_path(order), :action => 'go' do %>
+          <% if order.state === "pending" %>
+            <div class="item-li">
+              <%= render 'shared/card', order: order, user: order.user, item_var: order.item, order_div: true %>
               <button type="button" class="btn btn-info btn-sm item-btn">
-                <%= link_to "Approve", order_path(order, order: {state: "approved"}), method: :put, data: { confirm: "Are you sure you wish to approve this request?"}
+                <%= link_to "Approve", order_path(order, order: {state: "accepted"}), method: :put, data: { confirm: "Are you sure you wish to approve this request?"}
                  %>
               </button>
               <button type="button" class="btn btn-danger btn-sm item-btn">
-                <%= link_to "Decline", order_path(order),
-                method: :delete,
-                data: { confirm: "Are you sure you wish to decline this request?" } %>
+                <%= link_to "Reject", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to reject this request?"}
+                 %>
               </button>
-            <% else %>
-              <button type="button" class="btn btn-danger btn-sm item-btn">
-                <%= link_to "Cancel", order_path(order),
-                method: :delete,
-                data: { confirm: "Are you sure you wish to cancel this request?" } %>
-              </button>
-            <% end %>
-        </div>
+            </div>
+          <% end %>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
+
+    <div class="hide user-item-container other-user-reservations">
+      <h2>Items of yours that have been booked/cancelled:</h2>
+      <% @my_orders.each do |order| %>
+        <% if (order.state === "paid" || order.state === "free" || order.state === "accepted")%>
+          <%= link_to order_path(order), :action => 'go' do %>
+            <div class="item-li">
+              <%= render 'shared/card', order: order, user: order.user, item_var: order.item, order_div: true %>
+              <button type="button" class="btn btn-danger btn-sm item-btn">
+                <%= link_to "Cancel", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to cancel this request?"}
+                     %>
+              </button>
+            </div>
+          <% end %>
+        <% end %>
+      <% end %>
+    </div>
   </div>
 
 </div>
