--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,14 +16,18 @@
           <%= link_to "Homepage", root_path, class: "nav-link", id: "colorwh" %>
         </li>
         <li class="nav-item active">
-          <%= link_to "Account", user_show_path, class: "nav-link", id: "colorwh" %>
+          <%= link_to "Profile", user_show_path, class: "nav-link", id: "colorwh" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Add item", new_item_path, class: "nav-link", id: "colorwh" %>
+          <%= link_to "Mailbox", conversations_path, class: "nav-link", id: "colorwh" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Help", user_show_path, class: "nav-link", id: "colorwh" %>
         </li>
         <li class="nav-item dropdown">
           <%= image_tag current_user.photo, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <%= link_to "Add item", new_item_path, class: "dropdown-item" %>
             <%= link_to "Show all items", items_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
