small css change

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -18,7 +18,10 @@
 #colorwh {
   font-size: 1.1em;
   color: white;
+  text-decoration: none;
+  font-weight: bold;
   }
+
 .navbar-lewagon .navbar-brand img {
   width: 40px;
   height: 40px;
