--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -22,6 +22,13 @@
   font-weight: bold;
   }
 
+  #colorwh-head {
+  font-size: 1.2em;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  }
+
 .navbar-lewagon .navbar-brand img {
   width: 40px;
   height: 40px;
