--- a/app/views/orders/_payment.html.erb
+++ b/app/views/orders/_payment.html.erb
@@ -3,8 +3,10 @@
   <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
 
   <article>
-    <label class="amount"><%= item.title %>
-      <span>Deposit amount: <%= humanized_money_with_symbol(@order.amount) %></span>
+    <label>
+      <span><strong>Please note that unsuccessful reservations will be refunded by the item owner</strong></span>
+      <p></p>
+      <span><strong>Deposit amount: </strong><%= humanized_money_with_symbol(@order.amount) %></span>
     </label>
   </article>
 
