updating user homepage func

--- a/app/assets/stylesheets/pages/_user_home.scss
+++ b/app/assets/stylesheets/pages/_user_home.scss
@@ -57,8 +57,11 @@
     font-size: 24px;
 }
 
+.user-display:hover {
+  cursor: pointer;
+}
 
-//------------------toggle experiments---------------//
+//------------------user view toggle---------------//
 
 .user-toggle-btn{
     border: 3px solid #60cd78;
