star rating added and review ajax fixed

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -72,8 +72,7 @@
             <%= simple_form_for [@item, @review], remote: true do |f| %>
               <%= f.input :title, label: 'Please add your title and name' %>
               <%= f.input :body, label: 'Please add your review' %>
-              <p>Rating</p>
-              <%= f.collection_radio_buttons :rating, [['1', '1'] ,[2, '2'],[3, '3'],[4, '4'],[5, '5']], :first, :last %>
+              <%= f.input :rating, collection: (1..5).to_a, label: "Rating" %>
               <p></p>
               <%= f.submit "Submit review", class: 'btn btn-primary' %>
             <% end %>
