--- a/app/views/reviews/create.js.erb
+++ b/app/views/reviews/create.js.erb
@@ -1,4 +1,4 @@
-  var newReview = '<div class="review-container"> <div class="review-title"> <%= @review.title %></div> <div class="review-rating"> <%= @review.rating %></div> <div class="review-body"> "<%= @review.body %>"</div></div>'
+  var newReview = '<div class="review-title"><%= @review.title %></div><div class="review-container"> <div class="review-rating"> <%= @review.rating %></div> <div class="review-body d-flex align-items-center"> "<%= @review.body %>"</div></div>'
   var reviews = document.querySelector('#item-review-list')
   reviews.insertAdjacentHTML('beforeend', newReview)
 
