--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -2,12 +2,28 @@
   width: 100%;
   border: 1px solid red;
   display: block;
+  background: $green;
+  padding: 10px 0 15px 0;
+  font-size: 0.9em;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.user:hover {
+  background: rgba(81,201,108, 0.8);
+}
+
+.user a {
+  color: white;
+  text-decoration: none;
+
 }
 
 .users {
   display: flex;
   flex-direction: column;
   width: 40%;
+
 }
 
 .message {
@@ -31,4 +47,18 @@
   border-radius: 50%;
   float: left;
   margin-right: 10px;
+}
+
+.img-message {
+  width: 22px;
+}
+
+.body-message {
+  background: #435f7a;
+  color: #f5f5f5;
+      display: inline-block;
+    padding: 10px 15px;
+    border-radius: 20px;
+    max-width: 205px;
+    line-height: 130%;
 }
