--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -54,11 +54,25 @@
 }
 
 .body-message {
-  background: #435f7a;
+  background: $green;
   color: #f5f5f5;
-      display: inline-block;
-    padding: 10px 15px;
-    border-radius: 20px;
-    max-width: 205px;
-    line-height: 130%;
+  display: inline-block;
+  padding: 10px 15px;
+  border-radius: 20px;
+  line-height: 130%;
+}
+
+
+.body-list {
+  margin: 20px;
+  max-width: 200px;
+}
+
+.message-time {
+  font-size: 12px;
+  float: right;
+}
+
+.recipient-fullname {
+  color: white;
 }
