--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -104,11 +104,23 @@
 }
 
 .message-container {
-  width: 95%;
-  min-width: 360px;
-  max-width: 1000px;
   height: 92vh;
   min-height: 300px;
   max-height: 720px;
   background: #E6EAEA;
 }
+
+.segment,
+.message,
+.messages {
+  height: 100%;
+}
+
+.conversations {
+  height: 86%;
+}
+
+.segment {
+  overflow: scroll;
+}
+
