--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,9 +1,12 @@
-<div class="cards index-cards">
-  <% @items_paginator.each do |item| %>
-    <%= render "shared/grid-cards", item: item %>
-  <% end %>
+<div>
+  <div class="cards index-cards">
+    <% @items_paginator.each do |item| %>
+      <%= render "shared/grid-cards", item: item %>
+    <% end %>
+  </div>
   <%= paginate @items_paginator %>
 </div>
+
 
 <div
   id="map"
