--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,36 @@
-<h2>Latest items added</h2>
+<div id="how-it-works">
+  <div class="intro-about">
+    <p><strong>Streetshare is an app we have developed to help people save money and foster community spirit.</strong></p>
+  </div>
+  <div class="about-steps">
+    <div style="margin: 22px 0px;">
+      <p style="text-align: center; font-size: 25px; color: $dark-gray; font: $body-font;"><strong>How StreetShare works<strong></p>
+    </div>
+    <div class="steps">
+      <div id="step1" class="step">
+        <%= image_tag "give1.png", class: "img-about-left" %>
+        <p>Give to others</p>
+        <p style="text-align: center; font-size: 10px; color: $dark-gray; font: $body-font;">Give things away you no longer need.
+        Share household items and your community will appreciate it. StreetShare finds friends and neighbors who need them.</p>
+      </div>
+      <div id="step2" class="step">
+        <%= image_tag "About2.png", class: "img-about-middle" %>
+        <p>Find what you need</p>
+        <p style="text-align: center; font-size: 10px; color: $dark-gray; font: $body-font;">Explore the thousands of products, clothes, books, bikes and more that are being given away for free or just to be borrowed for a period of time on StreetShare </p>
+      </div>
+      <div id="step3" class="step">
+        <%= image_tag "receive1.jpeg", class: "img-about-right" %>
+        <p>Pick up your things</p>
+        <p style="text-align: center; font-size: 10px; color: $dark-gray; font: $body-font;">After ordering the items, only you have to do is to collect your items and use them.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<h2 style="margin: 26px 0px;">Latest items added</h2>
 <div class="cards">
   <% @items.each do |item| %>
-    <%= render "shared/grid-cards", item: item %>
+  <%= render "shared/grid-cards", item: item %>
   <% end %>
 </div>
 <div class="buttom-button">
