--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -131,3 +131,10 @@
 .message-form {
   width: 100%;
 }
+
+.btn-message {
+  cursor: pointer;
+  padding: 0 20px;
+  color: white;
+  background: $green;
+}
