--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -23,7 +23,7 @@
 .users {
   display: flex;
   flex-direction: column;
-  width: 40%;
+  width: 35%;
 
 }
 
@@ -36,7 +36,7 @@
 .messages {
   display: flex;
   flex-direction: column;
-  width: 60%;
+  width: 65%;
 }
 
 .conversations {
@@ -142,4 +142,8 @@
 .sender .body-message {
   background: #f5f5f5;
   color:  #2c3e50;
+}
+
+.message-time {
+  color: rgba(44,62,80,0.7)
 }
