--- a/app/assets/stylesheets/components/_grid-cards.scss
+++ b/app/assets/stylesheets/components/_grid-cards.scss
@@ -70,10 +70,53 @@
 .steps {
   display: flex;
   justify-content: space-around;
+  margin: 30px 0 60px;
 }
 
 .step {
-  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 60px;
+  width: 33.33333%;
+
+  span {
+    margin-bottom: 16px;
+    font-size: 21px;
+    font-weight: 600;
+    color: $green;
+  }
+
+  p {
+    margin: 0 auto;
+    font-size: 16px;
+    font-weight: 100;
+  }
+}
+
+.step.separators {
+  position: relative;
+
+  &:before {
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: $green;
+  }
+
+  &:after {
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    top: 0;
+    right: 0;
+    background-color: $green;
+  }
 }
 
 .intro-about {
