--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,12 @@
 // Specific CSS for your home-page
+
+.sub-title {
+  font-size: 32px;
+  font-weight: 600;
+  color: $green;
+}
+
+.sub-content {
+  font-size: 21px;
+  opacity: 0.7;
+}
