--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -2,16 +2,11 @@
   width: 100%;
   // border: 1px solid red;
   display: block;
-  background: $green;
   padding: 10px 0 15px 0;
   font-size: 0.9em;
   cursor: pointer;
   font-size: 16px;
   padding: 10px;
-}
-
-.user:hover {
-  background: rgba(81,201,108, 0.8);
 }
 
 .user a {
@@ -24,7 +19,12 @@
   display: flex;
   flex-direction: column;
   width: 35%;
+  background: $green;
 
+}
+
+.user:hover {
+  background: rgba(81,201,108, 0.8);
 }
 
 .message {
@@ -146,4 +146,9 @@
 
 .message-time {
   color: rgba(44,62,80,0.7)
+}
+
+.current_user {
+  margin: 15px;
+  color: white;
 }
