name of the image changed, error fixed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
         <p>Explore the thousands of products, clothes, books, bikes and more that are being given away for free or just to be borrowed for a period of time on StreetShare </p>
       </div>
       <div id="step3" class="step">
-        <%= image_tag "receive1.jpeg", class: "img-about-right" %>
+        <%= image_tag "receive1.jpg", class: "img-about-right" %>
         <span>Pick up your things</span>
         <p>After ordering the items, only you have to do is to collect your items and use them. Once the owner confirms that you have returned the item, you'll get your deposit back</p>
       </div>
