--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -7,11 +7,13 @@
   cursor: pointer;
   font-size: 16px;
   padding: 10px;
+
 }
 
 .user a {
   color: white;
   text-decoration: none;
+
 
 }
 
@@ -19,8 +21,7 @@
   display: flex;
   flex-direction: column;
   width: 35%;
-  background: $green;
-
+  background: rgba(81,201,108, 0.7);
 }
 
 .user:hover {
@@ -28,7 +29,7 @@
 }
 
 .message {
-  border: 1px solid $green;
+  // border: 1px solid $green;
   display: block;
   width: 100%;
 }
@@ -120,6 +121,9 @@
 .conversations {
   height: 100%;
   background: #E6EAEA;
+  -webkit-box-shadow: 7px 10px 37px -16px rgba(0,0,0,0.56);
+  -moz-box-shadow: 7px 10px 37px -16px rgba(0,0,0,0.56);
+  box-shadow: 7px 10px 37px -16px rgba(0,0,0,0.56);
 
 }
 
@@ -151,4 +155,23 @@
 .current_user {
   margin: 15px;
   color: white;
+}
+
+.current_user img {
+  border: 2px solid white;
+  width: 50px;
+}
+
+.current_user {
+  padding-bottom: 15px;
+  border-bottom: 1px solid white;
+}
+
+.fullname-user {
+  margin-left: 10px;
+  position: absolute;
+}
+
+.inbox {
+  margin: 20px 0;
 }
