--- a/app/views/pages/user_show.html.erb
+++ b/app/views/pages/user_show.html.erb
@@ -21,24 +21,15 @@
 
     <div class="user-item-container user-items">
       <h2>Your items:</h2>
-      <% @user_items.each do |item| %>
-        <%= link_to item_path(item), :action => 'go' do %>
-          <div class="item-li">
-            <%#= render partial: "shared/card", object: item, locals: {item_div: true} %>
+      <div class="cards">
+        <% @user_items.each do |item| %>
+          <div class="card">
             <%= render 'shared/card', item: item, item_var: item, order_div: false %>
-            <span>
-              <button type="button" class="btn btn-info btn-sm item-btn">
-                <%= link_to "Edit item", edit_item_path(item) %>
-              </button>
-              <button type="button" class="btn btn-danger btn-sm item-btn">
-                <%= link_to "Delete", item_path(item),
-                method: :delete,
-                data: { confirm: "Are you sure?" } %>
-              </button>
-            </span>
+            <%= button_to "Edit item", edit_item_path(item), method: :get, class: "btn btn-sm edit-btn item-btn" %>
+            <%= button_to "Delete", item_path(item), method: :delete, data: { confirm: "Are you sure you wish to delete this item?"}, class: "btn btn-sm delete-btn item-btn" %>
           </div>
         <% end %>
-      <% end %>
+      </div>
     </div>
 
     <!-- <h2 class="user-orders user-item-parent">Here is the list of items you have requested or borrowed:</h2> -->
@@ -53,24 +44,21 @@
           <% end %>
       <% end %>
       <h2>Items you've booked:</h2>
+      <div class="cards">
       <% @user_orders.each do |order| %>
-        <%= link_to order_path(order), :action => 'go' do %>
-          <div class="item-li">
+          <div class="card">
             <%= render 'shared/card', order: order, user: order.item.user, item_var: order.item, order_div: true %>
             <% if order.state === "pending" %>
-              <button type="button" class="btn btn-info btn-sm item-btn">Pay
+              <button type="button" class="btn btn-sm edit-btn item-btn">Pay
                   <%#= link_to "Pay", order_path(order, order: {state: "paid"}), method: :put, data: { confirm: "Are you sure you wish to approve this request?"}
                    %>
                 </button>
             <% else %>
-              <button type="button" class="btn btn-danger btn-sm item-btn">
-               <%= link_to "Cancel", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to cancel this request?"}
-                 %>
-              </button>
+              <%= button_to "Cancel", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to cancel this request?"}, class: "btn btn-sm delete-btn item-btn" %>
             <% end %>
           </div>
         <% end %>
-      <% end %>
+      </div>
     </div>
   </div>
 
@@ -86,38 +74,28 @@
 
     <div class="user-item-container other-user-requests">
       <h2>Items of yours that have been requested:</h2>
-      <% @my_orders.each do |order| %>
-        <%= link_to order_path(order), :action => 'go' do %>
-          <% if order.state === "pending" %>
-            <div class="item-li">
-              <%= render 'shared/card', order: order, user: order.user, item_var: order.item, order_div: true %>
-              <button type="button" class="btn btn-info btn-sm item-btn">
-                <%= link_to "Approve", order_path(order, order: {state: "accepted"}), method: :put, data: { confirm: "Are you sure you wish to approve this request?"}
-                 %>
-              </button>
-              <button type="button" class="btn btn-danger btn-sm item-btn">
-                <%= link_to "Reject", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to reject this request?"}
-                 %>
-              </button>
-            </div>
-          <% end %>
+      <div class="cards">
+        <% @my_orders.each do |order| %>
+            <% if order.state === "pending" %>
+              <div class="card">
+                <%= render 'shared/card', order: order, user: order.user, item_var: order.item, order_div: true %>
+                <%= button_to "Approve", order_path(order, order: {state: "accepted"}), method: :put, data: { confirm: "Are you sure you wish to approve this request?"}, class: "btn btn-sm edit-btn item-btn" %>
+                <%= button_to "Reject", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to reject this request?"}, class: "btn btn-sm delete-btn item-btn" %>
+              </div>
+            <% end %>
         <% end %>
-      <% end %>
+      </div>
     </div>
 
     <div class="hide user-item-container other-user-reservations">
       <h2>Items of yours that have been booked/cancelled:</h2>
+      <div class="cards">
       <% @my_orders.each do |order| %>
         <% if (order.state === "paid" || order.state === "free" || order.state === "accepted")%>
-          <%= link_to order_path(order), :action => 'go' do %>
-            <div class="item-li">
+            <div class="card">
               <%= render 'shared/card', order: order, user: order.user, item_var: order.item, order_div: true %>
-              <button type="button" class="btn btn-danger btn-sm item-btn">
-                <%= link_to "Cancel", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to cancel this request?"}
-                     %>
-              </button>
+              <%= button_to "Cancel", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to cancel this request?"}, class: "btn btn-sm delete-btn item-btn" %>
             </div>
-          <% end %>
         <% end %>
       <% end %>
     </div>
