--- a/app/assets/stylesheets/components/_grid-cards.scss
+++ b/app/assets/stylesheets/components/_grid-cards.scss
@@ -1,6 +1,5 @@
 .card-category {
   background-size: cover;
-  // background-repeat: no-repeat;
   background-position: center;
   height: 180px;
   display: flex;
@@ -12,14 +11,34 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px 5px 0px 0px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+
+  span {
+    font-size: 14px;
+    position: absolute;
+    background: white;
+    color: black;
+    text-shadow: none;
+    padding: 6px 8px;
+    border-left: 1px solid #cdcdcd;
+    border-bottom: 1px solid #cdcdcd;
+    border-radius: 0 0 0 6px;
+  }
 }
 
 .card {
   border-radius: 5px;
   transition: 0.3s;
+  overflow: hidden;
+  transition: .2s ease-in-out;
+
   &:hover {
+    top: -2px;
     background: #ebebeb;
-    box-shadow: 4px 4px 11px rgba(0,0,0,0.2);
+    box-shadow: 0 1px 15px rgba(0,0,0,0.1);
+
+    .card-info:before {
+      transform: translateX(0);
+    }
   }
 }
 
@@ -43,10 +62,26 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  position: relative;
   color: #303030;
+  font-weight: 600;
+  background-color: white;
+  border-top: 1px solid #cdcdcd;
 
   span i {
     color: #e7e713;
+  }
+
+  &:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    left: 0;
+    bottom: 0;
+    transition: 0.2s ease-in-out;
+    transform: translateX(-100%);
+    background: $green;
   }
 }
 
