--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -91,6 +91,10 @@
   padding: 8px 16px;
   display: flex;
   justify-content: space-between;
+
+  .menu-item:not(:last-of-type) {
+    margin-right: 16px;
+  }
 }
 
 button.btn.btn-flat {
