--- a/app/views/shared/_grid-cards.html.erb
+++ b/app/views/shared/_grid-cards.html.erb
@@ -1,10 +1,9 @@
 <%= link_to item_path(item), class: "remove-underline" do %>
   <div class="card">
-    <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path item.photo %>')">
-      <span style="font-size: 16px; margin: 2%;"><%= item.title.split(" - ")[1] %></span>
+    <div class="card-category" style="background-image: url('<%= cl_image_path item.photo %>')">
+      <span><%= item.title.split(" - ")[1] %></span>
     </div>
     <div class="card-info">
-
       <span><%= item.title.split(" - ")[0] %></span>
     </div>
   </div>
