added icons for how it works

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,18 +5,18 @@
 
     <div class="steps">
       <div id="step1" class="step">
-        <%= image_tag "give1.png", class: "img-about-left" %>
+        <%= image_tag "about11.png", class: "img-about-left" %>
         <span>Give to others</span>
         <p>Give things away you no longer need.
         Share household items and your community will appreciate it. StreetShare finds friends and neighbors who need them.</p>
       </div>
       <div id="step2" class="step separators">
-        <%= image_tag "About2.png", class: "img-about-middle" %>
+        <%= image_tag "about22.png", class: "img-about-middle" %>
         <span>Find what you need</span>
         <p>Explore the thousands of products, clothes, books, bikes and more that are being given away for free or just to be borrowed for a period of time on StreetShare </p>
       </div>
       <div id="step3" class="step">
-        <%= image_tag "receive1.jpg", class: "img-about-right" %>
+        <%= image_tag "streetshare2.png", class: "img-about-right" %>
         <span>Pick up your things</span>
         <p>After ordering the items, only you have to do is to collect your items and use them. Once the owner confirms that you have returned the item, you'll get your deposit back</p>
       </div>
