--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -31,7 +31,9 @@
           <%= simple_form_for @order do |f| %>
             <%= f.input :item_id, as: :hidden, input_html: { value: @item.id } %>
             <%= submit_tag 'Reserve Item with owner', class: 'btn btn-primary' %>
-            <%= link_to "Message owner",conversations_path(sender_id: current_user.id, recipient_id: @item.user_id), method: :post, class: 'btn btn-primary' %>
+            <% unless current_user.nil? %>
+              <%= link_to "Message owner",conversations_path(sender_id: current_user.id, recipient_id: @item.user_id), method: :post, class: 'btn btn-primary' %>
+            <% end %>
           <% end %>
         <% else %>
           <%= simple_form_for @order do |f| %>
@@ -41,7 +43,9 @@
             </div>
             <%= f.input :item_id, as: :hidden, input_html: { value: @item.id } %>
             <%= submit_tag 'Reserve item & pay deposit', class: 'btn btn-primary' %>
-            <%= link_to "Message owner",conversations_path(sender_id: current_user.id, recipient_id: @item.user_id), method: :post, class: 'btn btn-primary' %>
+            <% unless current_user.nil? %>
+              <%= link_to "Message owner",conversations_path(sender_id: current_user.id, recipient_id: @item.user_id), method: :post, class: 'btn btn-primary' %>
+            <% end %>
           <% end %>
         <% end %>
       <% end %>
