--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,7 +18,7 @@
 
     <%= simple_form_for :search, url: items_path, method: :get, html: {class: 'form-inline'} do |f| %>
       <div class="search-form-control">
-        <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="ex: bike, barbeque" />
+        <input class="form-control string required" type="text" name="search[query]" id="search_query" placeholder="ex: bike" />
         <input class="form-control string required w-100" type="text" name="search[location]" id="search_location" placeholder="ex: London" />
         <button name="button" type="submit" class="btn btn-flat search-btn">
           <i class="fas fa-search"></i> Search
