user homepage updates

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
         <%= yield %>
       </div>
 
-      <% if controller_name == 'pages' %>
+      <% if @home %>
         <div class="footer">
           <%= render 'shared/footer' %>
         </div>
