--- a/app/views/pages/user_show.html.erb
+++ b/app/views/pages/user_show.html.erb
@@ -6,7 +6,7 @@
   <input id="toggle-on" class="toggle toggle-left" name="toggle" value="false" type="radio" checked>
   <label for="toggle-on" class="user-toggle-btn user-home ss-active">My Home</label>
   <input id="toggle-off" class="toggle toggle-right" name="toggle" value="true" type="radio">
-  <label for="toggle-off" class="user-toggle-btn user-lend">Lending</label>
+  <label for="toggle-off" class="user-toggle-btn user-lend">Orders</label>
 </div>
 
 <div id="item-display-div">
@@ -15,7 +15,7 @@
     <div class="item-flex-list user-display-toggle">
       <ul>
         <li class="user-display user-items-btn lgt-green ss-active"><strong>My Items</strong></li>
-        <li class="user-display user-orders-btn"> <strong>My Orders</strong> </li>
+        <li class="user-display user-orders-btn"> <strong>My Requests</strong> </li>
       </ul>
     </div>
 
@@ -25,8 +25,6 @@
         <% @user_items.each do |item| %>
           <div class="card">
             <%= render 'shared/card', item: item, item_var: item, order_div: false %>
-            <%= button_to "Edit item", edit_item_path(item), method: :get, class: "btn btn-sm edit-btn item-btn" %>
-            <%= button_to "Delete", item_path(item), method: :delete, data: { confirm: "Are you sure you wish to delete this item?"}, class: "btn btn-sm delete-btn item-btn" %>
           </div>
         <% end %>
       </div>
@@ -35,28 +33,23 @@
     <!-- <h2 class="user-orders user-item-parent">Here is the list of items you have requested or borrowed:</h2> -->
     <%#= render partial: "shared/plus_minus" %>
     <div class="hide user-item-container user-orders">
-      <%= month_calendar events: @user.orders do |date, orders| %>
-        <%= date %>
-          <% orders.each do |order| %>
-        <div>
-          <%= order.item.title %>
-         </div>
-          <% end %>
-      <% end %>
+      <%#= month_calendar events: @user.orders do |date, orders| %>
+        <%#= date %>
+          <%# orders.each do |order| %>
+        <!-- <div> -->
+          <%#= order.item.title %>
+         <!-- </div> -->
+          <%# end %>
+      <%# end %>
       <h2>Items you've booked:</h2>
       <div class="cards">
-      <% @user_orders.each do |order| %>
-          <div class="card">
-            <%= render 'shared/card', order: order, user: order.item.user, item_var: order.item, order_div: true %>
-            <% if order.state === "pending" %>
-              <button type="button" class="btn btn-sm edit-btn item-btn">Pay
-                  <%#= link_to "Pay", order_path(order, order: {state: "paid"}), method: :put, data: { confirm: "Are you sure you wish to approve this request?"}
-                   %>
-                </button>
-            <% else %>
+        <% @user_orders.each do |order| %>
+          <% if order.state != "rejected" %>
+            <div class="card">
+              <%= render 'shared/card', order: order, user: order.item.user, item_var: order.item, order_div: true %>
               <%= button_to "Cancel", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to cancel this request?"}, class: "btn btn-sm delete-btn item-btn" %>
-            <% end %>
-          </div>
+            </div>
+          <% end %>
         <% end %>
       </div>
     </div>
@@ -67,19 +60,19 @@
   <div id="user-lending-div" class="hide">
     <div class="item-flex-list user-display-toggle">
       <ul>
-        <li class="user-display other-user-requests-btn ss-active lgt-green"> <strong>Other User Requests</strong> </li>
-        <li class="user-display other-user-reservations-btn"> <strong>Other User Reservations</strong> </li>
+        <li class="user-display other-user-requests-btn ss-active lgt-green"> <strong>Orders awaiting approval</strong> </li>
+        <li class="user-display other-user-reservations-btn"> <strong>Orders you've approved</strong> </li>
       </ul>
     </div>
 
     <div class="user-item-container other-user-requests">
-      <h2>Items of yours that have been requested:</h2>
+      <!-- <h2>Items of yours that have been requested:</h2> -->
       <div class="cards">
         <% @my_orders.each do |order| %>
-            <% if order.state === "pending" %>
+            <% if (order.state === 'pending' || order.state === 'paid') %>
               <div class="card">
                 <%= render 'shared/card', order: order, user: order.user, item_var: order.item, order_div: true %>
-                <%= button_to "Approve", order_path(order, order: {state: "accepted"}), method: :put, data: { confirm: "Are you sure you wish to approve this request?"}, class: "btn btn-sm edit-btn item-btn" %>
+                <%= button_to "Accept", order_path(order, order: {state: "accepted"}), method: :put, data: { confirm: "Are you sure you wish to approve this request?"}, class: "btn btn-sm edit-btn item-btn" %>
                 <%= button_to "Reject", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to reject this request?"}, class: "btn btn-sm delete-btn item-btn" %>
               </div>
             <% end %>
@@ -88,10 +81,10 @@
     </div>
 
     <div class="hide user-item-container other-user-reservations">
-      <h2>Items of yours that have been booked/cancelled:</h2>
+      <!-- <h2>Items of yours that have been booked/cancelled:</h2> -->
       <div class="cards">
       <% @my_orders.each do |order| %>
-        <% if (order.state === "paid" || order.state === "free" || order.state === "accepted")%>
+        <% if (order.state === "accepted")%>
             <div class="card">
               <%= render 'shared/card', order: order, user: order.user, item_var: order.item, order_div: true %>
               <%= button_to "Cancel", order_path(order, order: {state: "rejected"}), method: :put, data: { confirm: "Are you sure you wish to cancel this request?"}, class: "btn btn-sm delete-btn item-btn" %>
