--- a/app/views/orders/_payment.html.erb
+++ b/app/views/orders/_payment.html.erb
@@ -4,7 +4,7 @@
 
   <article>
     <label>
-      <span><strong>Please note that unsuccessful reservations will be refunded by the item owner</strong></span>
+      <span><strong>Please note that unsuccessful reservations will be refunded</strong></span>
       <p></p>
       <span><strong>Deposit amount: </strong><%= humanized_money_with_symbol(@order.amount) %></span>
     </label>
